; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/radio/si470x/extr_radio-si470x-usb.c_si470x_set_led_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/radio/si470x/extr_radio-si470x-usb.c_si470x_set_led_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.si470x_device = type { i8* }

@LED_REPORT = common dso_local global i8 0, align 1
@LED_COMMAND = common dso_local global i8 0, align 1
@LED_REPORT_SIZE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.si470x_device*, i8)* @si470x_set_led_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @si470x_set_led_state(%struct.si470x_device* %0, i8 zeroext %1) #0 {
  %3 = alloca %struct.si470x_device*, align 8
  %4 = alloca i8, align 1
  %5 = alloca i32, align 4
  store %struct.si470x_device* %0, %struct.si470x_device** %3, align 8
  store i8 %1, i8* %4, align 1
  %6 = load i8, i8* @LED_REPORT, align 1
  %7 = load %struct.si470x_device*, %struct.si470x_device** %3, align 8
  %8 = getelementptr inbounds %struct.si470x_device, %struct.si470x_device* %7, i32 0, i32 0
  %9 = load i8*, i8** %8, align 8
  %10 = getelementptr inbounds i8, i8* %9, i64 0
  store i8 %6, i8* %10, align 1
  %11 = load i8, i8* @LED_COMMAND, align 1
  %12 = load %struct.si470x_device*, %struct.si470x_device** %3, align 8
  %13 = getelementptr inbounds %struct.si470x_device, %struct.si470x_device* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 1
  store i8 %11, i8* %15, align 1
  %16 = load i8, i8* %4, align 1
  %17 = load %struct.si470x_device*, %struct.si470x_device** %3, align 8
  %18 = getelementptr inbounds %struct.si470x_device, %struct.si470x_device* %17, i32 0, i32 0
  %19 = load i8*, i8** %18, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 2
  store i8 %16, i8* %20, align 1
  %21 = load %struct.si470x_device*, %struct.si470x_device** %3, align 8
  %22 = load %struct.si470x_device*, %struct.si470x_device** %3, align 8
  %23 = getelementptr inbounds %struct.si470x_device, %struct.si470x_device* %22, i32 0, i32 0
  %24 = load i8*, i8** %23, align 8
  %25 = load i32, i32* @LED_REPORT_SIZE, align 4
  %26 = call i32 @si470x_set_report(%struct.si470x_device* %21, i8* %24, i32 %25)
  store i32 %26, i32* %5, align 4
  %27 = load i32, i32* %5, align 4
  %28 = icmp slt i32 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %2
  %30 = load i32, i32* @EINVAL, align 4
  %31 = sub nsw i32 0, %30
  br label %33

32:                                               ; preds = %2
  br label %33

33:                                               ; preds = %32, %29
  %34 = phi i32 [ %31, %29 ], [ 0, %32 ]
  ret i32 %34
}

declare dso_local i32 @si470x_set_report(%struct.si470x_device*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
